firt version of buildin methods